--- a/SFML_SimCity2000/SFML_SimCity2000.vcxproj
+++ b/SFML_SimCity2000/SFML_SimCity2000.vcxproj
@@ -112,7 +112,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);YAML_CPP_STATIC_DEFINE</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.6.1\include;$(SolutionDir)ImGui;$(SolutionDir)$(ProjectName)\;$(SolutionDir)$(ProjectName)\Framework;$(SolutionDir)$(ProjectName)\Drawable;$(SolutionDir)$(ProjectName)\GameObject;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.6.1\include;$(SolutionDir)ImGui;$(SolutionDir)$(ProjectName)\;$(SolutionDir)$(ProjectName)\Framework;$(SolutionDir)$(ProjectName)\Drawable;$(SolutionDir)$(ProjectName)\GameObject;$(SolutionDir)$(ProjectName)\Scene;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -133,7 +133,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);YAML_CPP_STATIC_DEFINE</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.6.1\include;$(SolutionDir)ImGui;$(SolutionDir)$(ProjectName)\;$(SolutionDir)$(ProjectName)\Framework;$(SolutionDir)$(ProjectName)\Drawable;$(SolutionDir)$(ProjectName)\GameObject;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.6.1\include;$(SolutionDir)ImGui;$(SolutionDir)$(ProjectName)\;$(SolutionDir)$(ProjectName)\Framework;$(SolutionDir)$(ProjectName)\Drawable;$(SolutionDir)$(ProjectName)\GameObject;$(SolutionDir)$(ProjectName)\Scene;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -185,10 +185,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Scene_Loading.cpp" />
-    <ClCompile Include="Scene_Lobby.cpp" />
-    <ClCompile Include="Scene_SimCityInGame.cpp" />
-    <ClCompile Include="Scene_Test.cpp" />
+    <ClCompile Include="Scene\Scene_Loading.cpp" />
+    <ClCompile Include="Scene\Scene_Lobby.cpp" />
+    <ClCompile Include="Scene\Scene_SimCityInGame.cpp" />
+    <ClCompile Include="Scene\Scene_Test.cpp" />
     <ClCompile Include="Framework\SoundManager.cpp" />
     <ClCompile Include="GameObject\SimCityCursor.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -239,10 +239,10 @@
     <ClInclude Include="Managers_header.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="Scene_Loading.h" />
-    <ClInclude Include="Scene_Lobby.h" />
-    <ClInclude Include="Scene_SimCityInGame.h" />
-    <ClInclude Include="Scene_Test.h" />
+    <ClInclude Include="Scene\Scene_Loading.h" />
+    <ClInclude Include="Scene\Scene_Lobby.h" />
+    <ClInclude Include="Scene\Scene_SimCityInGame.h" />
+    <ClInclude Include="Scene\Scene_Test.h" />
     <ClInclude Include="Framework\SoundManager.h" />
     <ClInclude Include="GameObject\SimCityCursor.h" />
     <ClInclude Include="Tile.h" />
