--- a/SFML_SimCity2000_bin/imgui.ini
+++ b/SFML_SimCity2000_bin/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=1,1
+Pos=-7,-1
 Size=289,166
 Collapsed=0
 
@@ -14,7 +14,7 @@ Size=198,71
 Collapsed=0
 
 [Window][Tile Menu]
-Pos=0,171
-Size=290,750
+Pos=-3,170
+Size=243,750
 Collapsed=0
 
