--- a/SFML_SimCity2000/SFML_SimCity2000.vcxproj
+++ b/SFML_SimCity2000/SFML_SimCity2000.vcxproj
@@ -112,7 +112,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);YAML_CPP_STATIC_DEFINE</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.6.1\include;$(SolutionDir)ImGui;$(SolutionDir)$(ProjectName)\;$(SolutionDir)$(ProjectName)\Framework;$(SolutionDir)$(ProjectName)\Drawable;$(SolutionDir)$(ProjectName)\GameObject;$(SolutionDir)$(ProjectName)\Scene;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.6.1\include;$(SolutionDir)ImGui;$(SolutionDir)$(ProjectName)\;$(SolutionDir)$(ProjectName)\Framework;$(SolutionDir)$(ProjectName)\Drawable;$(SolutionDir)$(ProjectName)\GameObject;$(SolutionDir)$(ProjectName)\Scene;$(SolutionDir)$(ProjectName)\Tile;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -133,7 +133,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);YAML_CPP_STATIC_DEFINE</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.6.1\include;$(SolutionDir)ImGui;$(SolutionDir)$(ProjectName)\;$(SolutionDir)$(ProjectName)\Framework;$(SolutionDir)$(ProjectName)\Drawable;$(SolutionDir)$(ProjectName)\GameObject;$(SolutionDir)$(ProjectName)\Scene;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.6.1\include;$(SolutionDir)ImGui;$(SolutionDir)$(ProjectName)\;$(SolutionDir)$(ProjectName)\Framework;$(SolutionDir)$(ProjectName)\Drawable;$(SolutionDir)$(ProjectName)\GameObject;$(SolutionDir)$(ProjectName)\Scene;$(SolutionDir)$(ProjectName)\Tile;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -191,10 +191,14 @@
     <ClCompile Include="Scene\Scene_Test.cpp" />
     <ClCompile Include="Framework\SoundManager.cpp" />
     <ClCompile Include="GameObject\SimCityCursor.cpp" />
-    <ClCompile Include="Tile.cpp" />
-    <ClCompile Include="TileGrid.cpp" />
+    <ClCompile Include="TileViewChild.cpp" />
+    <ClCompile Include="Tile\Tile.cpp" />
+    <ClCompile Include="Tile\TileController.cpp" />
+    <ClCompile Include="Tile\TileGrid.cpp" />
+    <ClCompile Include="Tile\TileModel.cpp" />
     <ClCompile Include="TileResData.cpp" />
     <ClCompile Include="TileResTable.cpp" />
+    <ClCompile Include="Tile\TileView.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Background_Lobby.h" />
@@ -245,10 +249,14 @@
     <ClInclude Include="Scene\Scene_Test.h" />
     <ClInclude Include="Framework\SoundManager.h" />
     <ClInclude Include="GameObject\SimCityCursor.h" />
-    <ClInclude Include="Tile.h" />
-    <ClInclude Include="TileGrid.h" />
+    <ClInclude Include="TileViewChild.h" />
+    <ClInclude Include="Tile\Tile.h" />
+    <ClInclude Include="Tile\TileController.h" />
+    <ClInclude Include="Tile\TileGrid.h" />
+    <ClInclude Include="Tile\TileModel.h" />
     <ClInclude Include="TileResData.h" />
     <ClInclude Include="TileResTable.h" />
+    <ClInclude Include="Tile\TileView.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
