--- a/SFML_SimCity2000/SFML_SimCity2000.vcxproj
+++ b/SFML_SimCity2000/SFML_SimCity2000.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="Scene\Scene_Test.cpp" />
     <ClCompile Include="Framework\SoundManager.cpp" />
     <ClCompile Include="GameObject\SimCityCursor.cpp" />
+    <ClCompile Include="TileAttTable.cpp" />
     <ClCompile Include="TileViewChild.cpp" />
     <ClCompile Include="Tile\Tile.cpp" />
     <ClCompile Include="Tile\TileController.cpp" />
@@ -249,6 +250,7 @@
     <ClInclude Include="Scene\Scene_Test.h" />
     <ClInclude Include="Framework\SoundManager.h" />
     <ClInclude Include="GameObject\SimCityCursor.h" />
+    <ClInclude Include="TileAttTable.h" />
     <ClInclude Include="TileViewChild.h" />
     <ClInclude Include="Tile\Tile.h" />
     <ClInclude Include="Tile\TileController.h" />
@@ -257,6 +259,9 @@
     <ClInclude Include="TileResData.h" />
     <ClInclude Include="TileResTable.h" />
     <ClInclude Include="Tile\TileView.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="SFML_SimCity2000.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
