--- a/SFML_SimCity2000/SFML_SimCity2000.vcxproj
+++ b/SFML_SimCity2000/SFML_SimCity2000.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="GameObject\SpriteObject.cpp" />
     <ClCompile Include="GameStart.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NormalBuilding.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -251,6 +252,7 @@
     <ClInclude Include="GameObject_headers.h" />
     <ClInclude Include="GameStart.h" />
     <ClInclude Include="Managers_header.h" />
+    <ClInclude Include="NormalBuilding.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PowerPlantBuilding.h" />
     <ClInclude Include="resource.h" />
