-빌딩 제외한 도로, 파워라인 등 저장가능 -저장한 파일 로드 가능
-로드때 이니셜라이징중에 게임오브젝트 생성하는 것 고쳐야
-build함수들 너무 제각각인것 수정해야

--- a/SFML_SimCity2000/SFML_SimCity2000.vcxproj
+++ b/SFML_SimCity2000/SFML_SimCity2000.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Background_Lobby.cpp" />
     <ClCompile Include="Building.cpp" />
     <ClCompile Include="BuildingGenerator.cpp" />
+    <ClCompile Include="DGameObject.cpp" />
     <ClCompile Include="Framework\DataTable.cpp" />
     <ClCompile Include="Framework\DataTableManager.cpp" />
     <ClCompile Include="Drawable\ColorPalette.cpp" />
@@ -213,6 +214,7 @@
     <ClInclude Include="Background_Lobby.h" />
     <ClInclude Include="Building.h" />
     <ClInclude Include="BuildingGenerator.h" />
+    <ClInclude Include="DGameObject.h" />
     <ClInclude Include="Framework\DataTable.h" />
     <ClInclude Include="Framework\DataTableManager.h" />
     <ClInclude Include="Drawable\ColorPalette.h" />
